<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStocks</string>
    <string name="action_settings">Settings</string>
    
    <string name="enter_symbol_text">Enter Stock Symbol</string>
    <string name="enter_symbol_button">Find</string>
    
    
    <string name="ok">OK</string>
    <string name="something_wrong">Something Went Wrong</string>
    <string name="no_stock_entered">Please Enter a Stock Symbol</string>
    
    <string name="stocks_heading_text">Stock Data</string>
    <string name="clear_stock_data_button">Clear Stock Data</string>
    
    
    <string name="get_quote_button">Get Quote</string>
    <string name="get_web_button">View Web</string>
    
	
    <string name="year_low_text">Year Low : </string>
    <string name="year_high_text">Year High : </string>
    <string name="days_low_text">Day\'s Low : </string>
    <string name="days_high_text">Day\'s High : </string>
    <string name="last_price_text">Last Price : </string>
    <string name="change_text">Change : </string>
    <string name="daily_price_range_text">Daily Price Range</string>
</resources>
