<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/enterSymbolText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_symbol_text" />

        <EditText
            android:id="@+id/enterSymbolData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5" 
            android:layout_weight="1"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/enterSymbolButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_symbol_button" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/azure" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stocks_heading_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:padding="5dp" />

    </TableRow>

    <TableRow
        android:id="@+id/DataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azure"
            android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding	="5dp"
                android:stretchColumns="yes" >
            </TableLayout>
        </ScrollView>

    </TableRow>

    <Button
        android:id="@+id/clearDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_stock_data_button" />

</TableLayout>
